# psychology_liu

./: .env.example  .gitignore  GEMINI.md  README.md  debug_data.py  pyproject.toml  test_countpoint.py  问卷1.md  问卷2.md  问卷3.md  问卷4.md  问卷5.md
src/: analyze_data.py  db.py  persona_runner.py  questionnaire_parser.py  verify_db.py  visualize_results.py
src/config/: llm_config.py
src/llm/: client.py
tests/: ctq_plot.py  ctq_plot_separate.py  test3.py  test_2.py  test_deepseek_thinking.py  test_kimi_temp.py  test_llm.py
